connected to database

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,8 @@
 HOSTNAME=localhost
 PORT=8000
+# MONGODB_URL= "mongodb+srv://text:root@cluster0.rf4j0.mongodb.net/"
+# MONGODB_URL= mongodb+srv://testUser:testuser@123@cluster0.gitr5.mongodb.net/testdb;
+MONGODB_URL=mongodb+srv://testUser:testuser%40123@cluster0.gitr5.mongodb.net/testdb
+
+
+MONGODB_URL=mongodb+srv://text:root@cluster0.rf4j0.mongodb.net/testdb
