--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,6 @@
 HOSTNAME=localhost
 PORT=4000
+# MONGODB_URL= mongodb+srv://testUser:<db_password>@cluster0.gitr5.mongodb.net/
+
+# MONGODB_URL=mongodb+srv://text:<db_password>@cluster0.rf4j0.mongodb.net/
+MONGODB_URL=mongodb+srv://testUser:testuser%40123@cluster0.gitr5.mongodb.net/shortenerlive
