--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,6 @@
 HOSTNAME=localhost
 PORT=4000
+// MONGODB_URL= mongodb+srv://testUser:<db_password>@cluster0.gitr5.mongodb.net/
+
+
+MONGODB_URL= mongodb+srv://text:<db_password>@cluster0.rf4j0.mongodb.net/
