--- a/package.json
+++ b/package.json
@@ -4,23 +4,15 @@
   "description": "Short-URL Generator- Frontend Application in node JS Express and MongoDB\r #short-url-fe\r https://github.com/nidhirajawat/short-url-fe",
   "main": "app.js",
   "scripts": {
-    
-
     "start": "node app.js",
     "dev": "nodemon app.js"
-},
-
-  
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.2",
     "nodemon": "^3.1.7"
   }
 }
-
-
-
-
-
